# SentimentScribe

./: .env.example  .gitignore  Bookreview_Sentiment_Analysis.ipynb  README.md  docker-compose.yml  mlflow.db  monitor.py  pyproject.toml  render.yaml  requirements-api.txt  requirements.txt  train.py
.streamlit/: secrets.toml.example
api/: auth.py  main.py
configs/: config.yaml
dashboard/: app.py  auth.py
docker/: Dockerfile
experiments/artifacts/a72377f5bcac4b97bca4de6aadeb139c/: logistic_regression.pkl  vectorizer.pkl
src/data_pipeline/: load_data.py
src/features/: text_preprocessor.py
src/inference/: predictor.py
src/models/: tfidf_models.py  transformer_model.py
src/monitoring/: drift_detector.py
src/training/: trainer.py
src/utils/: explainability.py  logger.py
supabase/migrations/: 001_initial.sql
tests/: test_api.py  test_model.py  test_preprocessing.py
